--- a/index.html
+++ b/index.html
@@ -1,21 +1,11 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Dushyant Mehta Portfolio</h1>
-    <h2>I am a Web Developer</h2>
-    <hr />
-   <h2><a href="../2.4 Movie Ranking Project/index.html">Movie Ranking Project</a><br>
-    <img src="../movie.png" height="200"/>
-<h2><a href="../3.4 Birthday Invite Project/index.html">Birthday Invite Project</a><br>
-    <img src="../birthday.png" height="200"/>
-<hr />
-<h3><a href="../4.3 HTML Porfolio Project/public/about.html">About me</a>
-<a href="../4.3 HTML Porfolio Project/public/contact.html">Contact</a>
-</body>
-</html>
+<h1>It's My Birthday !</h1>
+<h2>On the 16th Feb</h2> 
+<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg"/>
+<h3>What to bring</h3>
+<ul>
+    <li>Ballons</li>
+    <li>Cake</li>
+    <li>Gifts</li>
+</ul>
+<h3>This is where you need to go:</h3>
+<a href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">Google map link</a>
